--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <style>
 P
 {
-border:6px solid pink
+border:6px solid Blue
 }
 </style>
 <p>
@@ -23,7 +23,7 @@ border:6px solid pink
 <a href="contact number:799579494">7995794941</a>
 <a href="Gmail: keerthi15048@gmail.com"></a>
 <h3>
-<div style=background colour:pink; colour: White;>
+<div style=background-colour: Blue; colour: White;>
 <u>CENTRE OBJECTIVE</u>
 </h3>
 
