--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<html>
+Hi<html>
 <head>
 <title>resume</title>
 </head>
@@ -21,7 +21,7 @@ border:6px solid Blue
 <h4>NEHRUNAGAR (M)</h4>
 <h4>KURNOOL (D)</h4>
 <a href="contact number:799579494">7995794941</a>
-<a href="Gmail: keerthi15048@gmail.com"></a>
+<a href="Gmail: keerthi15048@gmail.com">keerthi15048@gmail.com</a>
 <h3>
 <div style=background-colour: Blue; colour: White;>
 <u>CENTRE OBJECTIVE</u>
